<resources>
    <string name="app_name">QuickPDF</string>
    
    <!-- Main Activity -->
    <string name="no_recent_files">No recent files</string>
    <string name="open_pdf">Open PDF</string>
    <string name="recent_files">Recent Files</string>
    <string name="clear_recent">Clear Recent</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    
    <!-- PDF Viewer -->
    <string name="page_indicator">Page %1$d of %2$d</string>
    <string name="fit_width">Fit Width</string>
    <string name="fit_page">Fit Page</string>
    <string name="original_size">Original Size</string>
    <string name="night_mode">Night Mode</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="search">Search</string>
    <string name="thumbnails">Thumbnails</string>
    
    <!-- Permissions -->
    <string name="storage_permission_title">Storage Permission Required</string>
    <string name="storage_permission_message">QuickPDF needs storage permission to access and open PDF files on your device.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permission_denied_message">Storage permission is required to access PDF files. Please enable it in app settings.</string>
    
    <!-- File Operations -->
    <string name="file_not_found">File not found</string>
    <string name="error_opening_file">Error opening file</string>
    <string name="invalid_pdf">Invalid PDF file</string>
    
    <!-- Bookmarks -->
    <string name="add_bookmark">Add Bookmark</string>
    <string name="bookmark_title">Bookmark Title</string>
    <string name="bookmark_added">Bookmark added</string>
    <string name="bookmark_removed">Bookmark removed</string>
    <string name="enter_bookmark_title">Enter bookmark title</string>
    
    <!-- Updates -->
    <string name="check_for_updates">Check for Updates</string>
    <string name="auto_check_updates">Automatic Update Check</string>
    <string name="auto_check_updates_summary">Automatically check for updates on app startup</string>
    <string name="checking_for_updates">Checking for updates…</string>
    <string name="update_available">Update Available</string>
    <string name="update_available_message">A new version of QuickPDF is available: %1$s</string>
    <string name="no_updates_available">No Updates Available</string>
    <string name="no_updates_message">You are running the latest version of QuickPDF</string>
    <string name="update_check_failed">Update Check Failed</string>
    <string name="update_check_failed_message">Unable to check for updates. Please check your internet connection.</string>
    <string name="download_update">Download Update</string>
    <string name="update_later">Update Later</string>
    <string name="current_version">Current Version: %1$s</string>
    
    <!-- Password Protection -->
    <string name="password_protected_pdf">Password Protected PDF</string>
    <string name="enter_pdf_password">This PDF is password protected. Please enter the password to view it.</string>
    <string name="password">Password</string>
    <string name="incorrect_password">Incorrect password. Please try again.</string>
    <string name="unlock">Unlock</string>
    
    <!-- General -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    
    <!-- View Mode Arrays -->
    <string-array name="view_mode_entries">
        <item>Fit Width</item>
        <item>Fit Page</item>
        <item>Original Size</item>
    </string-array>
    
    <string-array name="view_mode_values">
        <item>fit_width</item>
        <item>fit_page</item>
        <item>original_size</item>
    </string-array>
</resources>